# iron-guard-server

./: Cargo.toml  Dockerfile  README.md
src/: controllers.rs  db.rs  main.rs  test.rs
src/controllers/: auth.rs  categories.rs  dashboard.rs  inventory.rs  items.rs  me.rs  mod.rs  users.rs
src/db/: mod.rs
src/entities/: category.rs  item.rs  mod.rs  prelude.rs  user.rs
src/migrator/: m20230227_000001_create_user_table.rs  m20230227_000002_create_category_table.rs  m20230227_000003_create_item_table.rs  mod.rs
src/test/: auth_test.rs  category_test.rs  dashboard_test.rs  inventory_test.rs  item_test.rs  mod.rs  user_test.rs  utils.rs
